# rocos-ethercat

./: .gitignore  CMakeLists.txt  README.md
config/: bcr_eni.xml  ecat_config.yaml  eni.xml  eni1.xml  eni4.xml  eni7.xml  eni_tech6.xml  robot_config.yaml  variables.csv
include/: ecat_config.hpp  ecat_info.hpp  robot_config.hpp
include/rocos_ethercat/: ecatProcess.h  ecatProcessCommon.h  ecatProcessConfig.h
include/sdk/: AtEmRasSrv.h  AtEmRasSrvVersion.h  AtEthercat.h  EcError.h  EcEscReg.h  EcFeatures.h  EcInterfaceCommon.h  EcLink.h  EcList.h  EcLog.h  EcOs.h  EcOsPlatform.h  EcType.h  EcVersion.h  EthernetServices.h  SlaveInfo.h
lib/LinkOsLayer/atemsys/: CMakeLists.txt  Makefile  atemsys.c  atemsys.h
protos/: ecm_data.proto  inputs.proto  outputs.proto  slave_info.proto
protos/rocos_ecm/: inputs.proto  outputs.proto  slave_info.proto
scripts/: initECM.sh.in  runECM.sh.in
src/: EcOs.cpp  ecatNotification.cpp  ecatProcess.cpp  ecatProcessCommon.cpp  ecatProcessMain.cpp  selectLinkLayer.cpp
test/: unit_test.cpp
